[package]
name = "ce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace", "std"] }
clap = { version = "4.5.21", features = ["derive"] }
polars = { version = "0.44.2", features = ["dtype-full", "parquet"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
